helm-projects/ingress-elasticsearch.yml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: elastic1.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: elasticsearch-master-headless 
            port:
              number: 9200   
  - host: elastic2.local 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: elasticsearch-master-headless 
            port:
              number: 9300
