helm-projects/ingress.yml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: stable-kube-prometheus-sta-prometheus
            port:
              number: 9090   
  - host: grafana.local 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stable-grafana
            port:
              number: 80
